# SharpImGui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SharpImGui.sln  cimgui.cpp
build_cimgui/: CMakeLists.txt  extras.cpp  extras.h
build_imgui/: CMakeLists.txt  extras.cpp  extras.h  imconfig_dll.h  to_podimvec2.py
print_offset/: CMakeLists.txt  main.cpp
sample/: CImGuiImpl.cs  D3DManager.cs  D3DRenderTarget.cs  FpsTimer.cs  Im3dContext.cs  ImGuiSceneView.cs  OribtCamera.cs  Program.cs  sample.csproj
sample/SharpImGui/: AppData.cs  ButtonFlags.cs  CImGui.cs  CameraState.cs  Color.cs  Context.cs  DrawList.cs  DrawPrimitiveType.cs  FrustumPlane.cs  GLFWwindow.cs  GizmoMode.cs  ID3D11Device.cs  ID3D11DeviceContext.cs  Id.cs  Im3d.cs  ImColor.cs  ImColor_Simple.cs  ImDrawChannel.cs  ImDrawCmd.cs  ImDrawCornerFlags.cs  ImDrawData.cs  ImDrawIdx.cs  ImDrawList.cs  ImDrawListFlags.cs  ImDrawListSharedData.cs  ImDrawListSplitter.cs  ImDrawVert.cs  ImFont.cs  ImFontAtlas.cs  ImFontAtlasCustomRect.cs  ImFontAtlasFlags.cs  ImFontConfig.cs  ImFontGlyph.cs  ImFontGlyphRangesBuilder.cs  ImGui.cs  ImGuiBackendFlags.cs  ImGuiCol.cs  ImGuiColorEditFlags.cs  ImGuiComboFlags.cs  ImGuiCond.cs  (+77 more)
sample/Win32API/: Types.cs  User32.cs  Window.cs
src/: CMakeLists.txt  extras.cpp  extras.h
